--- a/catshomeupdate.html
+++ b/catshomeupdate.html
@@ -42,7 +42,7 @@
     </div>
     <div class = "topmiddle">
         <p class = "title">
-        Welcome to the cat page!
+        Welcome to the cat page! Page for CATS!
         </p>
     </div>
     <div class = "topright">
